--- a/BMI_calculator/app/src/main/res/layout/activity_main.xml
+++ b/BMI_calculator/app/src/main/res/layout/activity_main.xml
@@ -119,15 +119,30 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/btn_calculate"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CALCULATE"
+        android:orientation="horizontal"
         android:layout_marginVertical="15dp"
         android:layout_marginHorizontal="25dp"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/btn_background"/>
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btn_clearData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CLEAR"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/btn_secondary_background"/>
+
+        <Button
+            android:id="@+id/btn_calculate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="CALCULATE"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/btn_background"/>
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -157,7 +172,8 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:gravity="center">
 
                 <TextView
                     android:id="@+id/txt_weight_class"
