--- a/BMI_calculator/app/src/main/res/values/colors.xml
+++ b/BMI_calculator/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="obese">#FF5722</color>
     <color name="layout_background">#101336</color>
     <color name="card_background">#26294C</color>
-    <color name="btn_background">#FF0062</color>
+    <color name="btn_background">#2A4A27</color>
+    <color name="btn_secondary_background">#800031</color>
 </resources>
